# apo

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  LICENSE  PROJECT-BELIEFS.md  README.md  docker-compose.postgres.yml  docker-compose.server.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  tsconfig.base.json
apps/example-service-py/: .env.example  .gitignore  README.md  package.json  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  HOW_TO_USE_SDK.md  main.py  package.json  pyproject.toml  pytest.pyi
backend/apo/: api.py  bootstrap.py  db.py  db_helpers.py  ingestion_helpers.py
backend/examples/: README.md  otel_ingestion_example.py  package.json  simple-sdk-example.ts
backend/scripts/: check_github_config.py  generate_mock_runs.py
backend/seeds/: seed_agent_task_runs.py
backend/tests/: conftest.py  test_adjacent_runs.py  test_agent_task_discovery.py  test_agent_task_files.py  test_agent_task_run_metadata.py  test_agent_task_run_routes.py  test_agent_task_runtime.py  test_agent_task_schedules.py  test_agent_task_stats.py  test_agent_task_stats_loader.py  test_agent_task_trace_projection.py  test_alpha_project_isolation.py  test_alpha_scheduler_recovery.py  test_analytics.py  test_annotations.py  test_api_key_cache.py  test_api_key_lifecycle.py  test_api_keys.py  test_auth.py  test_auth_env.py  test_auth_fail_closed.py  test_batch_concurrency_pool.py  test_bootstrap.py  test_comments.py  test_content_policy.py  test_cors.py  test_cost_apply.py  test_cost_calculation.py  test_cost_compute.py  test_cost_migration.py  test_demo_inventory_ids.py  test_email_service.py  test_email_verification.py  (+61 more)
(+639 files in other folders)
